# tencentcloud-iot-sdk-embedded-c

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CppUTestMakefileWorker.mk  LICENSE  Makefile  README.md  README_EN-US.md  cmake_build.sh  config.mk  device_info.json  make.settings
certs/: README.md
docs/: C-SDK_API及可变参数说明.md  C-SDK_Build编译环境及配置选项说明.md  C-SDK_Porting跨平台移植概述.md  Device_Auth设备接入认证.md  MCU+通用TCP_AT模组移植(FreeRTOS).md  MCU+通用TCP_AT模组移植(nonOS).md  物联网开发平台.md  物联网通信.md  物联网通信平台.md
docs/IoT_Explorer/: Data_template数据模板应用开发.md
docs/IoT_Hub/: IoT_Hub mqtt over websocket 接入.md  IoT_Hub通信平台快速入门.md  broadcast_sample_广播通信.md  coap_sample_CoAP通讯.md  door_aircond_sample_设备互通.md  dynreg_dev_sample_动态注册.md  gateway_sample_网关功能.md  log_upload_设备日志上报.md  mqtt_sample_快速入门.md  ota_mqtt_subdev_sample网关子设备升级.md  ota_sample_固件升级.md  remote_config_mqtt_sample_远程配置.md  remote_login_ssh_远程登陆 SSH.md  resource_mqtt_sample_资源管理上传与下载.md  rrpc_sample_同步通信.md  shadow_sample_设备影子.md
docs/en/: C-SDK API Function and Variable Parameter Description_EN-US.md  C-SDK Compilation Method and Configuration Option Description_EN-US.md  C-SDK Cross-Platform Porting_EN-US.md  C-SDK Multi-Thread and Multi-Device Support_EN-US.md  Device_Auth_Authentication of Device Access Platform_EN-US.md  FreeRTOS+lwIP_Platform Porting_EN-US.md  MCU+ universal TCP AT module Porting((FreeRTOS))_EN-US.md  MCU+ universal TCP AT module Porting(nonOS)_EN-US.md  MCU+Tencent Cloud IoT AT instruction_EN-US.md
docs/en/IoT_Hub/: IoT_Hub C-SDK Getting Started_EN-US.md  broadcast_sample_Broadcast Communication_EN-US.md  coap_sample_CoAP Communication_EN-US.md  door_aircond_sample_Device Interconnection_EN-US.md  dynreg_dev_sample_Dynamic Registration_EN-US.md  gateway_sample_Getting Started with Gateway Device_EN-US.md  log_upload_Device Log Reporting_EN-US.md  mqtt_sample_Quick Start_EN-US.md  ota_mqtt_subdev_sample_Subdevice OTA Firmware Update Through Gateway_EN-US.md  ota_sample_OTA Device Firmware Update_EN-US.md  remote_config_mqtt_sample_Remote Configuration_EN-US.md  rrpc_sample_Sync Communication_EN-US.md  shadow_sample_Device Shadow_EN-US.md
external_libs/googletest/: Makefile
external_libs/mbedtls/: Makefile
external_libs/wslay/: CMakeLists.txt  Makefile
external_libs/wslay/lib/: CMakeLists.txt  Makefile  wslay_event.c  wslay_event.h  wslay_frame.c  wslay_frame.h  wslay_net.c  wslay_net.h  wslay_queue.c  wslay_queue.h  wslay_stack.c  wslay_stack.h
include/: config.h  lite-list.h  lite-utils.h  platform.h  qcloud_iot_export.h  qcloud_iot_export_variables.h  qcloud_iot_import.h  qcloud_iot_tls_psk_config.h  utils_getopt.h
include/exports/: qcloud_iot_export_broadcast.h  qcloud_iot_export_coap.h  qcloud_iot_export_dynreg.h  qcloud_iot_export_error.h  qcloud_iot_export_event.h  qcloud_iot_export_gateway.h  qcloud_iot_export_log.h  qcloud_iot_export_mqtt.h  qcloud_iot_export_ota.h  qcloud_iot_export_remote_config.h  qcloud_iot_export_resource.h  qcloud_iot_export_rrpc.h  qcloud_iot_export_shadow.h  qcloud_iot_export_system.h
libs/CppUTest/: aclocal.m4  config.h.in  configure
libs/hostmatch/: hostname_compare.c
platform/at_device/esp8266/: at_device_esp8266.c  (+1 more)
qcloud-iot-sdk-embedded-c/: filterGcov.sh
qcloud-iot-sdk-embedded-c/certs/: TEST_CLIENT_cert.crt  TEST_CLIENT_private.key
samples/: CMakeLists.txt  Makefile  samples.mk
samples/airconditioner/: Makefile  airconditioner.c  airconditioner_v2.c
samples/broadcast/: broadcast_sample.c
samples/coap/: coap_sample.c
samples/config/: remote_config_mqtt_sample.c
samples/data_template/: data_config.c  data_template_sample.c  events_config.c
samples/door/: Makefile  door.c
samples/dynamic_reg_dev/: dynamic_reg_dev_sample.c
samples/dynreg_dev/: dynreg_dev_sample.c
samples/event/: event_sample.c  events_config.c
samples/gateway/: gateway_sample.c
samples/mqtt/: Makefile  iot_config.h  mqtt_sample.c  multi_thread_mqtt_sample.c
samples/multi_client/: multi_client_mqtt_sample.c  multi_client_shadow_sample.c
samples/nbiot/: nbiot_sample.c
samples/ota/: ota_coap_sample.c  ota_mqtt_sample.c  ota_mqtt_subdev_sample.c
samples/resource/: resource_mqtt_sample.c
samples/rrpc/: rrpc_sample.c
samples/scenarized/: aircond_shadow_sample.c  aircond_shadow_sample_v2.c  door_coap_sample.c  door_mqtt_sample.c  light_data_template_sample.c
samples/shadow/: shadow_sample.c
sdk-tests/multi_thread_test/: multi_thread_test.c  multi_thread_test.mk
sdk-tests/unit_test/: run_unit_test.cpp  unit_test.mk
sdk_src/: CMakeLists.txt
sdk_src/internal_inc/: at_client.h  at_socket_inf.h  at_uart_hal.h  at_utils.h  coap_client.h  coap_client_net.h  gateway_common.h  json_parser.h  log_upload.h  mqtt_client.h  mqtt_client_net.h  network_interface.h  ota_client.h  ota_fetch.h  ota_lib.h  qcloud_iot_ca.h  qcloud_iot_common.h  qcloud_iot_device.h  qcloud_iot_http.h  resource_client.h  resource_lib.h  resource_upload.h  shadow_client.h  shadow_client_common.h  shadow_client_json.h  system_mqtt_ssh_proxy.h  utils_aes.h  utils_base64.h  utils_hmac.h  utils_httpc.h  utils_list.h  utils_md5.h  utils_param_check.h  utils_ringbuff.h  utils_sha1.h  utils_timer.h  utils_url_upload.h  utils_websocket_client.h
sdk_src/network/: network_interface.c
sdk_src/utils/: ca.c  device.c  json_parser.c  json_token.c  qcloud_iot_ca.c  qcloud_iot_device.c  qcloud_iot_http.c  qcloud_iot_log.c  string_utils.c  utils_aes.c  utils_base64.c  utils_getopt.c  utils_hmac.c  utils_list.c  utils_md5.c  utils_ringbuff.c  utils_sha1.c  utils_timer.c
src/: Makefile
src/configs/: default_settings.mk  settings.mk
src/scripts/: internal_make_funcs.mk  parse_make_settings.mk  rules-final.mk  rules-tests.mk  rules.mk  stats_static_lib.sh  update_mbedtls.sh
src/sdk-impl/: qcloud_iot_export.h  qcloud_iot_import.h  qcloud_iot_sdk_impl.c  qcloud_iot_sdk_impl_internal.h
tests/gtest/: run_test  run_test.cpp  run_test.xml
tests/integration/: Makefile
tools/: codegen.py  example_config.json
tools/build_scripts/: parse_make_settings.mk  rules.mk
tools/cmake_scripts/: config.h.in
(+280 files in other folders)
